css/style.css
:root {
    --color-primary: darkslateblue;
    --color-secondary: cornsilk;
    --color-background-light:rgb(247, 244, 235);
    --color-accent: rgb(212, 196, 176);
    --color-text: rgb(31, 36, 41);
    --color-text-light: rgb(128, 118, 106);
    --color-hypertext: green;
    --color-hypertext-dark: rgb(1, 62, 1);
    --font-size-small: 15px;
}

.row {
    display: flex;
    align-items: center;
    gap: 1.9rem;
}

* {
  box-sizing: border-box;
}

header {
    position: sticky;
    top: 1.5rem;
    color: var(--color-primary);
    margin: 1.5rem 0;
    margin-bottom: 4rem;
    padding: 2rem;
    z-index: 1;
}

#header {
    display: contents;
    padding: 0 0;
}

header .row {
    max-width: 60rem;
    margin: 0 auto;
    padding: 0 0rem;
    display: flex; 
    align-items: center;
    justify-content: space-between;
}

header .row .row {
    display: flex;
    margin: 0 0;
    align-items: center;
    gap: 3.1rem;
}

header .row .button {
    padding: 0.615rem 0.615rem;
    margin: 0 0;
    border-radius: 1.9rem;
    box-shadow: 0 0 0 0.31rem var(--color-primary);
    color: var(--color-primary);
    text-decoration: none;
    font-weight: bold;
    font-size: 1.2rem;
}

header .row .button:hover{
    padding: 0.625rem 0.625rem;
    margin: 0 0;
    border-radius: 1.9rem;
    box-shadow: 0 0 0 0.31rem var(--color-primary);
    color: var(--color-secondary);
    background-color: var(--color-primary);
    text-decoration: none;
    font-weight: bold;
    font-size: 1.2rem;
}

header .row .homeButton {
    color: var(--color-primary);
    font-weight: bold;
    font-size: 3rem;
    text-decoration: none;
    margin-top: 0.31rem;
    margin-bottom: 0.31rem;
}

header .row .homeButton:hover {
    color: var(--color-primary);
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    margin: 0 0;
    font: 1.2rem / 1.5 system-ui;
    color: var(--color-text);
    background-color: var(--color-secondary);
}

.content {
  flex: 1;
  max-width: 68rem;       /* caps width on large screens */
  margin: 0 auto;
  padding: 0 1.5rem;
  width: 100%;
}

footer p {
    color: var(--color-text-light);
    font-size: var(--font-size-small);
    margin-top: 2.19rem;
    margin-bottom: 0.31rem;
    padding: 0 0;
    text-align: center;
}

img {
    max-width: var(--image-width, 30rem);
    height: auto;
    margin: 1.9rem 0.625rem;
    outline: 0.625rem solid var(--color-primary);
}

p {
    padding: 0 0;
}

h1 {
    padding: 0 0;
}

h2 {
    margin-top: 1.5rem;
    margin-bottom: 0.5rem;
}

h2:first-child {
    margin-top: 0;
    padding-top: 0;
}

h2:last-child {
    margin-bottom: 0;
    padding-bottom: 0;
}

h3:first-child {
    margin-top: 0;
    padding-top: 0;
}

h3:last-child {
    margin-bottom: 0;
    padding-bottom: 0;
}

p:last-child {
    margin-bottom: 0;
    padding-bottom: 0;
}

a {
    color: var(--color-hypertext);
}

a:hover {
    text-decoration: none;
    color: var(--color-hypertext-dark);
}

.message {
    color: var(--color-primary);
    font-weight: bold;
    font-size: 3.5rem;
    text-decoration: none;
    margin-top: 2.81rem;
    margin-bottom: 2.81rem;
}

canvas {
    display: block;
    position: absolute;
    left: 0;
    width: 100%;
    top: 100%;
    transform: translateY(-50%);
    z-index: 2;
    pointer-events: none;
}

canvas.wave:first-of-type {
    top: 0%;
    transform: translateY(-50%);
}

canvas.wave:last-of-type {
    top: 100%;
    transform: translateY(-50%);
}

#ascii_art {
    color: var(--color-primary);
    font-weight: bold;
    font-size: 0.5rem;
    text-decoration: none;
    margin-top: 3.75rem;
    margin-bottom: 0;
}

@media (max-width: 500px) {
    header {
        position: relative;
    }

    header .row .homeButton {
    font-size: 1.8rem;
    margin-top: 0.2rem;
    margin-bottom: 0.2rem;
    }

    header .row .button {
    font-size: 0.9rem;
    padding: 0.4rem 0.5rem;
    }

    header .row .button:hover {
    font-size: 0.9rem;
    padding: 0.4rem 0.5rem;
    }

    header .row .row {
    gap: 1rem;
    }

    header .row {
    padding: 0.5rem 0;
    }

    .row {
    flex-direction: column;
    align-items: flex-start;
    gap: 1rem;
    }

    header .row .row {
    flex-direction: row;
    display: flex;
    margin: 0 0;
    align-items: center;
    gap: 2rem;
    }

    .row img {
        width: 100%;
        max-width: 100%;
        margin: 0.5rem 0;
    }
}

